# open-wallpaper-engine

./: CMakeLists.txt  deps.json
src/: CMakeLists.txt  SceneSourceResolver.cpp  SceneSourceResolver.hpp  SceneWallpaper.cpp  SceneWallpaper.hpp  WPMdlParser.cpp  WPPuppet.cpp  WPSceneParser.cpp  WPSceneParser.hpp
src/Audio/: AudioResponseAnalyzerVdsp.cpp  AudioResponseAnalyzerVdsp.hpp  AudioResponseService.cpp  FfmpegSoundStream.cpp  FfmpegSoundStream.hpp  SoundManager.cpp
src/Audio/include/Audio/: AudioResponseService.h  SoundManager.h
src/Interface/: IParticleRawGener.h  ISceneParser.h
src/Platform/Apple/: SceneWallpaperBindings.h  SceneWallpaperBindings.mm
src/Presentation/: WallpaperScaling.cpp  WallpaperScaling.hpp
src/Project/: ProjectManifest.cpp  ProjectManifest.hpp  ProjectProperties.cpp  ProjectProperties.hpp
src/Resource/: RenderTargetRegistry.cpp  RenderTargetRegistry.hpp  TextureResourceKind.hpp  TextureResourceResolver.cpp  TextureResourceResolver.hpp
src/Runtime/: DynamicValue.cpp  DynamicValue.hpp  ScalarAnimation.hpp  SceneRuntimeContext.cpp  SceneRuntimeContext.hpp  SceneSettingResolver.cpp  SceneSettingResolver.hpp  ScriptedDynamicValue.cpp  ScriptedDynamicValue.hpp
src/Scene/: Scene.cpp  SceneCamera.cpp  SceneImageEffectLayer.cpp  SceneWallpaper.cpp  SceneWallpaper.hpp  WPShaderValueUpdater.cpp  WPShaderValueUpdater.hpp
src/Scene/Parse/: ShaderLex.cpp  ShaderLex.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPParticleParser.cpp  WPParticleParser.hpp  WPPuppet.cpp  WPPuppet.hpp  WPSceneParser.cpp  WPShaderAnnot.cpp  WPShaderParser.cpp  WPShaderParser.hpp  WPSoundParser.cpp  WPSoundParser.hpp
src/Scene/Parse/wpscene/: WPImageObject.cpp  WPImageObject.h  WPMaterial.cpp  WPMaterial.h  WPMiscObject.hpp  WPParticleObject.cpp  WPParticleObject.h
src/Scene/Particle/: ParticleEmitter.cpp  ParticleSystem.cpp  WPParticleRawGener.cpp
src/Scene/Particle/include/Particle/: ParticleEmitter.h  ParticleSystem.h  WPParticleRawGener.h
src/Scene/VulkanRender/: CustomShaderPass.cpp  CustomShaderPass.hpp  FinPass.cpp  FinPass.hpp  Resource.hpp  SceneToRenderGraph.cpp  VulkanRender.cpp
src/Scene/VulkanRender/include/VulkanRender/: VulkanRender.hpp
src/Scene/include/Scene/: Scene.h  SceneImageEffectLayer.h  SceneMesh.h  SceneRenderTarget.h
src/Scripting/: ScriptEngine.cpp  ScriptEngine.hpp
src/Shader/: RustShaderBridge.cpp  RustShaderBridge.hpp  SceneShaderLegalizer.cpp  ShaderPreprocessor.cpp
src/Text/: TextLayer.cpp  TextLayer.hpp
src/Timer/: FrameTimer.cpp  ThreadTimer.cpp
src/Timer/include/Timer/: FrameTimer.hpp
src/Utils/: DynamicLibrary.cpp  FrameTimer.cpp  Logging.cpp
src/Utils/include/Utils/: Logging.h  String.h
src/Video/: VideoMetadata.hpp  VideoTextureSource.hpp
src/Vulkan/: Device.cpp  GraphicsPipeline.cpp  Instance.cpp  Parameters.cpp  Shader.cpp  StagingBuffer.cpp  Swapchain.cpp  TextureCache.cpp
src/Vulkan/include/Vulkan/: Device.hpp  GraphicsPipeline.hpp  Instance.hpp  Parameters.hpp  RenderFrameStats.hpp  SampleCount.hpp  StagingBuffer.hpp  Swapchain.hpp  TextureCache.hpp
src/VulkanRender/: CustomShaderPass.cpp  CustomShaderPass.hpp  FinPass.cpp  FinPass.hpp  PassCommon.hpp  PrePass.cpp  Resource.hpp  SceneToRenderGraph.cpp  VulkanRender.cpp
src/VulkanRender/include/VulkanRender/: PassBatch.hpp
tests/: CMakeLists.txt  dump.cpp  mdl_schema_tests.cpp  media_thumbnail_texture_smoke.cpp  particle_mouse_controlpoint_test.cpp  rendergraph_smoke.cpp  scene_mesh_tests.cpp  scene_schema_tests.cpp  scenescript_media_event_smoke.cpp  scenescript_sound_layer_smoke.cpp  script_runtime_compat_test.cpp  shader_cache_metadata_test.cpp  shader_lex_tests.cpp  shader_preprocessor_compat_test.cpp  text_object_runtime_test.cpp  video_texture_submission_smoke.cpp  vulkan_render_batch_planner_smoke.cpp  vulkan_sample_count_smoke.cpp  wpshader_parse_tests.cpp
tests/audio/: audio_response_mono_test.cpp  ffmpeg_sound_stream_test.cpp  sound_layer_control_test.cpp
tests/timer/: frame_timer_test.cpp
waywallen/sources/: wallpaper_engine.lua
